feat: remove fixed timeouts and add batched bidirectional table-fill processing
Agent-Logs-Url: https://github.com/408738606/A23/sessions/a3b1bba7-96fa-4987-9f55-9ca07fba3881

Co-authored-by: 408738606 <154857660+408738606@users.noreply.github.com>